update license to 2018